# rinha-2k25

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
src/: main.rs
