[package]
name = "rinha_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["json"]}
tokio = { version = "1.46.1", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
